add-comment-first-section

--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@
     </header>
     <!-- </header> -->
     <main>
+        <!-- inizio prima sezione -->
         <section>
             <h2>Le mie spese</h2>
             <table>
@@ -63,6 +64,7 @@
             <!-- fine tabella  -->
             <hr>
         </section>
+        <!-- fine prima sezione -->
         <section>
           
         </section>
