add-second-section

--- a/Index.html
+++ b/Index.html
@@ -65,9 +65,18 @@
             <hr>
         </section>
         <!-- fine prima sezione -->
+        <!-- inizio seconda sezione -->
         <section>
-          
+            <h2>Cose da fare</h2>
+            <ul>
+                <li>Visitare la Tower of london <strong>&cross;</strong></li>
+                <li>Visitare greenwich <strong>&check;</strong></li>
+                <li>Ascoltare un artista di strada a Covent Garden <strong>&check;</strong></li>
+                <li>Mangiare il tipico Fish and Chips inglese <strong>&cross;</strong></li>
+            </ul>
+            <hr>
         </section>
+        <!-- fine seconda sezione -->
         <section>
             
         </section>
