--- a/Index.html
+++ b/Index.html
@@ -35,19 +35,19 @@
                    <tr>
                        <td>1</td>
                        <td>Biglietto Aereo</td>
-                       <td>120€</td>
+                       <td>120&euro;</td>
                    </tr>  
 
                    <tr>
                        <td>1</td>  
                        <td>Biglietto Aereo</td>
-                       <td>120€</td>
+                       <td>120&euro;</td>
                    </tr>
 
                    <tr> 
                        <td>1</td>  
                        <td>Biglietto Aereo</td>
-                       <td>120€</td> 
+                       <td>120&euro;</td> 
                    </tr>
 
                 </tbody>
@@ -56,7 +56,7 @@
                 <tfoot>
                     <tr>
                         <td colspan="2">Totale</td>
-                        <td>360€</td>
+                        <td>360&euro;</td>
                     </tr>
                 </tfoot>
                 <!-- fine tfoot -->
